--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 80px;
-    background-color: #1C1C1E;
+    background-color: #111E33;
     z-index: 1000;
     display: flex;
     align-items: center;
@@ -16,6 +16,7 @@
     margin-left: 15px;
     padding-left: 0;
     transition: transform 0.3s ease, filter 0.3s ease;
+    display: block;
 }
 
 .navbar-logo:hover {
